[gd_scene load_steps=5 format=3 uid="uid://c87xrvj0v16sm"]

[ext_resource type="Script" path="res://Scenes/pause_menu/pause_menu.gd" id="1_dpvq5"]
[ext_resource type="PackedScene" uid="uid://b6k43v6pmb73g" path="res://Scenes/options_menu/options_menu.tscn" id="2_867ex"]
[ext_resource type="PackedScene" uid="uid://dt1sgt7ge327r" path="res://components/background_fade.tscn" id="3_qbw78"]
[ext_resource type="PackedScene" uid="uid://bl4chlsthddi5" path="res://Scenes/ui/sound_button.tscn" id="5_7v3i3"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
layer = 3
script = ExtResource("1_dpvq5")
options_menu_scene = ExtResource("2_867ex")

[node name="BackgroundFade" parent="." instance=ExtResource("3_qbw78")]

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.14902, 0.168627, 0.266667, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 32
text = "Paused"

[node name="ResumeButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("5_7v3i3")]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Resume"

[node name="OptionsButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("5_7v3i3")]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Options"

[node name="QuitButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("5_7v3i3")]
layout_mode = 2
text = "Quit to Menu"

[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
